[package]
name = "rusttyper"
version = "0.4.0"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
license = "MIT / Apache-2.0"
description = "Basic text layout, using rusttype."
repository = "https://github.com/purpleposeidon/rusttyper"

[dependencies]
glium = "^0.25"
unicode-normalization = "^0.1.2"
rusttype = { version = "0.8", features = ["gpu_cache"] }
